--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,8 @@
 spring.application.name=RacoesECia
-
-
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username=postgres
-spring.datasource.password=123456
-
-
-spring.jpa.show-sql=true
+spring.datasource.url=jdbc:postgresql://dpg-d56qvk1r0fns73edbkng-a.oregon-postgres.render.com:5432/racoes_db?sslmode=require
+spring.datasource.username=racoes_user
+spring.datasource.password=glBywT3Gr3C3hDcfzPx6NfAtjLW6xkjf
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
