"Configurando banco para não apagar dados"

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,24 @@
 spring.application.name=RacoesECia
+
+# --- CONEX\u00C3O COM O BANCO DE DADOS (RENDER) ---
+# A URL conecta o seu Java l\u00E1 no servidor da Calif\u00F3rnia
 spring.datasource.url=jdbc:postgresql://dpg-d56qvk1r0fns73edbkng-a.oregon-postgres.render.com:5432/racoes_db?sslmode=require
 spring.datasource.username=racoes_user
 spring.datasource.password=glBywT3Gr3C3hDcfzPx6NfAtjLW6xkjf
 spring.datasource.driver-class-name=org.postgresql.Driver
+
+# --- CONFIGURA\u00C7\u00C3O DO HIBERNATE (JPA) ---
+# O Dialeto ensina o Java a falar a l\u00EDngua exata do PostgreSQL
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+# \uD83D\uDD25 A LINHA MAIS IMPORTANTE:
+# 'update' = Mant\u00E9m os dados antigos e s\u00F3 cria tabelas novas se precisar.
+# Se estivesse 'create', ele apagaria tudo a cada rein\u00EDcio.
 spring.jpa.hibernate.ddl-auto=update
+
+# Mostra no log os comandos SQL (INSERT, SELECT) que o sistema est\u00E1 fazendo
 spring.jpa.show-sql=true
+
+# --- CONFIGURA\u00C7\u00D5ES EXTRAS \u00DATEIS ---
+# Ajuda a ver mensagens de erro mais claras se algo falhar
+server.error.include-message=always
